reduce terminal font size in curl tutorial to prevent wrapping

--- a/doc/main.css
+++ b/doc/main.css
@@ -118,7 +118,7 @@ a {
   font-family: 'Courier New', monospace;
   color: #00ff00;
   background-color: black;
-  font-size: 13px;
+  font-size: 12px;
   width: 100%;
   margin-left: 20px;
   margin-bottom: 30px;
